@@ -40,6 +40,9 @@ import org.apache.poi.ss.usermodel.WorkbookFactory;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import de.poiu.kilt.internal.Language;
 import de.poiu.kilt.internal.Translation;
+import de.poiu.kilt.internal.XlsImExporter;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 
 
 /**
@@ -52,6 +55,8 @@ public class XlsFile {
 
   private static final String DEFAULT_I18N_SHEET_NAME = "i18n";
 
+  private static final String KILT_INFO_SHEET_NAME = "generation-info";
+
 
   /////////////////////////////////////////////////////////////////////////////
   //
@@ -59,6 +64,7 @@ public class XlsFile {
 
   private final Workbook workbook;
   private final Sheet i18nSheet;
+  private final Sheet kiltInfoSheet;
 
   private final File file;
 
@@ -79,6 +85,7 @@ public class XlsFile {
     this.workbook= this.prepareWorkbook(file);
     //TODO: Support custom sheet name
     this.i18nSheet= this.prepareI18nSheet(this.workbook, DEFAULT_I18N_SHEET_NAME);
+    this.kiltInfoSheet= this.updateKiltInfoSheet(this.workbook, KILT_INFO_SHEET_NAME);
 
     this.init();
   }
@@ -113,7 +120,7 @@ public class XlsFile {
   }
 
 
-  private Sheet prepareI18nSheet(Workbook workbook, final String sheetName) {
+  private Sheet prepareI18nSheet(final Workbook workbook, final String sheetName) {
     final Sheet sheet = workbook.getSheet(sheetName);
     if (sheet != null) {
       return sheet;
@@ -121,6 +128,26 @@ public class XlsFile {
       LOGGER.log(Level.INFO, "No sheet with name " + sheetName + " found. Creating new sheet.");
       return workbook.createSheet(sheetName);
     }
+  }
+
+
+  private Sheet updateKiltInfoSheet(final Workbook workbook, final String sheetName) {
+    Sheet sheet= workbook.getSheet(sheetName);
+    if (sheet != null) {
+      for (int i= sheet.getFirstRowNum(); i < sheet.getLastRowNum() + 1; i++) {
+        sheet.removeRow(sheet.getRow(i));
+      }
+    } else {
+      LOGGER.log(Level.INFO, "No sheet with name " + sheetName + " found. Creating new sheet.");
+      sheet= workbook.createSheet(sheetName);
+    }
+
+    this.writeRow(sheet, "Generated at:",   ZonedDateTime.now().format(DateTimeFormatter.ISO_OFFSET_DATE_TIME));
+    final String version= XlsImExporter.class.getPackage().getImplementationVersion();
+    this.writeRow(sheet, "Generated with:", "de.poiu.kilt:Kilt:"+version+" (https://github.com/hupfdule/kilt)");
+    this.writeRow(sheet, "Generated by: ",  System.getProperty("user.name"));
+
+    return sheet;
   }
 
 
@@ -288,5 +315,16 @@ public class XlsFile {
     }
 
     return contentMap.asMap();
+  }
+
+
+  private void writeRow(final Sheet sheet, final String... values) {
+    final Row row= sheet.createRow(sheet.getLastRowNum() + 1);
+    //TODO: Apply some CellStyles
+    for (int i= 0; i < values.length; i++) {
+      final Cell cell= row.createCell(i);
+      cell.setCellValue(this.workbook.getCreationHelper().createRichTextString(values[i]));
+      sheet.autoSizeColumn(i);
+    }
   }
 }
